--- a/ZoomLinkKeeper/Base.lproj/Main.storyboard
+++ b/ZoomLinkKeeper/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Zoom Link Keeper" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rWC-SA-c6f">
-                                <rect key="frame" x="20" y="20" width="984" height="41"/>
+                                <rect key="frame" x="20" y="20" width="946" height="41"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -84,22 +84,32 @@
                                 </prototypes>
                                 <sections/>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="252" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qX4-iy-xXL">
+                                <rect key="frame" x="974" y="25" width="30" height="30"/>
+                                <state key="normal" title="💡"/>
+                                <connections>
+                                    <action selector="lights:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UxU-GE-Dp9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="qX4-iy-xXL" secondAttribute="trailing" constant="20" id="4zV-dF-jMg"/>
                             <constraint firstItem="rWC-SA-c6f" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="6Ed-0r-NLa"/>
-                            <constraint firstItem="rWC-SA-c6f" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TXk-zn-seN"/>
+                            <constraint firstItem="qX4-iy-xXL" firstAttribute="leading" secondItem="rWC-SA-c6f" secondAttribute="trailing" constant="8" symbolic="YES" id="RJ7-LB-6pJ"/>
                             <constraint firstItem="CPD-pK-ENw" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="U4R-0Y-hjG"/>
                             <constraint firstItem="CPD-pK-ENw" firstAttribute="top" secondItem="rWC-SA-c6f" secondAttribute="bottom" constant="8" symbolic="YES" id="Xjd-7b-uMy"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="CPD-pK-ENw" secondAttribute="trailing" constant="20" id="bQz-Xy-I3x"/>
                             <constraint firstItem="CPD-pK-ENw" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="hwv-aL-PyT"/>
                             <constraint firstItem="rWC-SA-c6f" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="lCZ-IV-JAn"/>
+                            <constraint firstItem="qX4-iy-xXL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="25" id="msQ-d2-lXD"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Links" image="link" catalog="system" selectedImage="link" id="k7a-Ml-ign"/>
                     <connections>
                         <outlet property="dataSource" destination="CPD-pK-ENw" id="dlk-Lu-01J"/>
+                        <outlet property="lightButton" destination="qX4-iy-xXL" id="Bnm-Kz-PcV"/>
                         <outlet property="table" destination="CPD-pK-ENw" id="KCk-Am-8gQ"/>
                     </connections>
                 </viewController>
